# prio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TEAM_AGENT.md
.github/: copilot-instructions.md
.github/workflows/: android-ci.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: benchmark-rules.pro  build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/: AndroidManifest.xml
android/app/src/androidTest/java/com/prio/app/e2e/: BaseE2ETest.kt  HiltTestRunner.kt
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml  baseline-prof.txt
android/app/src/main/java/com/jeeves/app/: JeevesApplication.kt  MainActivity.kt
android/app/src/main/java/com/prio/app/: MainActivity.kt  PrioAppShell.kt  PrioApplication.kt
android/app/src/main/res/drawable/: ic_check.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_snooze.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/core/ai/: build.gradle.kts
android/core/ai-provider/: build.gradle.kts
android/core/common/: build.gradle.kts
android/core/data/: build.gradle.kts
android/core/data/schemas/com.prio.core.data.local.PrioDatabase/: 1.json  2.json
android/core/domain/: build.gradle.kts
android/core/ui/: build.gradle.kts
android/gradle/: libs.versions.toml
docs/: ACTION_PLAN.md  ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  DEVOPS_GUIDE.md  E2E_TEST_PLAN.md  MARKETING_STRATEGY.md  POST_MVP_ROADMAP.md  PRODUCT_BRIEF.md  RELEASE_SETUP_GUIDE.md  SECURITY_GUIDELINES.md  TODO.md  UX_DESIGN_SYSTEM.md
docs/results/0.1/: 0.1.1_todo_app_competitive_analysis.md  0.1.2_ai_assistant_landscape.md  0.1.3_on_device_llm_research.md  0.1.4_positioning_opportunities.md  0.1.5_user_personas.md  0.1.6_competitive_analysis_report.md  README.md
docs/results/0.2/: 0.2.1_llama_cpp_android_setup.md  0.2.2_phi3_benchmark_report.md  0.2.3_task_categorization_accuracy.md  0.2.4_device_compatibility_matrix.md  0.2.5_llm_selection_recommendation.md  README.md  benchmark_output.txt  benchmark_raw_results.txt  mistral_7b_benchmark_comparison.md  real_device_benchmark_results.txt
docs/results/0.2.6/: 0.2.6_benchmark_final_results.md  0.2.6_prompt_engineering_implementation.md  README.md  benchmark_results.md  benchmark_summary.txt  full_results.csv  native_benchmark_results.txt  native_benchmark_results.txt.csv  quick_results.txt
docs/results/0.3/: 0.3.1_80_20_feature_analysis.md  0.3.2_task_management_user_stories.md  0.3.3_goals_user_stories.md  0.3.4_calendar_briefings_user_stories.md  0.3.5_mvp_scope_boundary.md  0.3.6_mvp_prd.md  0.3.7_persona_validation.md  0.3.8_success_metrics.md  README.md
docs/results/1.1/: 1.1.10_error_empty_offline_states_spec.md  1.1.11_accessibility_requirements_spec.md  1.1.12_wireframes_spec.md  1.1.13_component_specifications.md  1.1.1_task_list_screen_spec.md  1.1.2_task_detail_sheet_spec.md  1.1.3_quick_capture_flow_spec.md  1.1.4_goals_screens_spec.md  1.1.5_today_dashboard_briefing_spec.md  1.1.6_calendar_day_view_spec.md  1.1.7_evening_summary_spec.md  1.1.8_onboarding_flow_spec.md  1.1.9_settings_screens_spec.md  README.md
docs/results/1.2/: 1.2.12_kotlin_serialization_ai_types.md  1.2.3_multi_module_architecture.md  1.2.5_room_database_schema.md  1.2.8_material3_theme.md  README.md
docs/results/1.3/: 1.3.1_interactive_prototype.md  1.3.2_usability_test_results.md  1.3.3_ux_issues_fixed.md  README.md
docs/results/2.1/: 2.1.11_user_preferences.md  2.1.6_task_repository.md  2.1.7_goal_repository.md  2.1.9_analytics_repository.md  2.1_migrations_strategy.md  README.md
docs/results/2.2/: 2.2.5_2.2.8_ai_provider_implementation.md  2.2.9_2.2.14_prompts_performance_cloud.md  README.md
docs/results/2.3/: 2.3_implementation_report.md  README.md
docs/results/3.1/: 3.1.10_smart_reminders.md  3.1.11_ui_tests.md  3.1.12_navigation_integration_analysis.md  3.1.1_eisenhower_engine.md  3.1.2_task_list_screen.md  3.1.4_task_detail_sheet.md  3.1.5.B.3_voice_input_implementation.md  3.1.5.B_bug_fixes_integration.md  3.1.5_navigation_implementation_report.md  3.1.5_quick_capture.md  3.1.6_drag_and_drop_reorder.md  3.1.9_recurring_tasks.md  README.md
docs/results/3.2/: 3.2_goals_plugin_implementation.md
docs/results/3.3/: README.md
docs/results/3.4/: 3.4_daily_briefings_implementation.md
docs/results/3.5/: 3.5_basic_analytics_implementation.md  E2E_GAP_REMEDIATION.md  E2E_TEST_RESULTS.md  E2E_TEST_RESULTS_ANALYSIS.md
docs/results/4.1/: 4.1_onboarding_settings_results.md
docs/results/4.2/: milestone_4.2_notifications.md
docs/results/4.3/: milestone_4.3_performance_testing.md
llm-test/: .gitignore  README.md  benchmark_output.txt  benchmark_prompts.sh  benchmark_run.txt  build.gradle.kts  full_benchmark.sh  full_logcat.txt  gradle.properties  native_benchmark.sh  quick_benchmark.sh  quick_test.sh  settings.gradle.kts
llm-test/app/: build.gradle.kts  proguard-rules.pro
llm-test/app/src/androidTest/java/app/jeeves/llmtest/: LlmInstrumentedTest.kt  PromptEngineeringInstrumentedTest.kt
llm-test/app/src/androidTest/java/app/prio/llmtest/: LlmInstrumentedTest.kt  PromptEngineeringInstrumentedTest.kt
llm-test/app/src/main/: AndroidManifest.xml
llm-test/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
llm-test/app/src/main/java/app/jeeves/llmtest/: LlmTestApplication.kt  MainActivity.kt  MainViewModel.kt
llm-test/app/src/main/java/app/prio/llmtest/: LlmTestApplication.kt  MainActivity.kt  MainViewModel.kt
llm-test/app/src/main/res/drawable/: ic_launcher_foreground.xml
llm-test/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+231 files in other folders)
